removed some reports